--- a/css/style.css
+++ b/css/style.css
@@ -1,125 +1,359 @@
-*, body {
-    box-sizing: border-box;
-    margin: 0;
-    font-family:"Kanit", sans-serif;
+* {
+  box-sizing: border-box;
 }
-
 body {
-    background-color:aliceblue;
-    padding: 20px;
-    margin: 0px;
-}
-
-#taskInput {
-    display: flex;
-    flex-direction: column;
-    background-color:azure;
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.inputContainer {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-
-.inputBlock {
-    flex: 1;
-    display: flex;
-    flex-direction: column; /* Stack label on top of input */
-}
-
-.inputBlock label {
-    margin-bottom: 5px; /* Add space between label and input */
-}
-
-#taskInput input {
-    padding: 10px;
-    border: 2px solid #000000;
-    border-radius: 10px;
-    box-sizing: border-box; /* Ensure padding and border are included in width */
-    font-size: 14px; /* Adjust font size for consistency */
-    width: auto;
-}
-
-#taskInput button {
-    margin-top: 10px;
-    align-self: flex-start; /* Align button to the bottom */
-    padding: 10px 20px;
-    border: none;
-    background-color: #007bff;
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px; /* Adjust font size */
-    font-weight: 700;
-}
-#taskInput button:hover {
-    background-color: #004896;
-}
-
-/* TODO(Alif): button on click styling */
-
-#taskListContainer {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: none;
-}
-
-#taskList {
-    list-style-type: none; /* Remove default list styling */
-    padding: 0;
-}
-
-.taskItem {
-    background-color: #f9f9f9;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-.taskItem .taskName {
-    text-transform: uppercase;
-    font-weight: bold;
-    margin-bottom: 5px;
-    padding: 0px;
-}
-
-.taskItem .taskDateTime {
-    font-size: 0.9em;
-    color: #666;
-}
-
-.taskItem button {
-    display: inline-block;
-    background-color: #e74c3c;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 5px 10px;
-    cursor: pointer;
-    align-items: center;
-}
-
-.taskNameDate {
-    display: flex;
-    flex-direction: column;
+  font-family: "Mali", cursive;
+  background-color: #fefaf6;
+  padding: 23px 36px 23px 36px;
+  margin: 0px;
 }
 
 h1 {
-    text-align:center;
+  color: #102c57;
+  display: block;
+  font-size: 45px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0 0 16px;
 }
 
-h2 {
-    font-weight:300;
-    font-size:15px;
+#topgridcontent,
+#botgridcontent {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 80px;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+#taskinputcontainer {
+  background-color: #102c57;
+  border-radius: 30px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  max-width: 100%;
+  flex: 1 1 300px;
+  padding: 15px 23px;
+  display: flex;
+  align-items: center;
+  gap: 60px;
+}
+
+.inputteam {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.input input {
+  background-color: #fefaf6;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  border: none;
+  padding: 20px;
+  margin: 4px 0;
+  width: 100%;
+  height: 31px;
+  flex: 1;
+}
+
+#textInput:focus,
+#dateInput:focus {
+  outline: none;
+}
+
+#textInput::placeholder,
+#dateInput::placeholder {
+  font-family: "Mali", cursive;
+}
+
+#buttoninput {
+  font-family: "Mali", cursive;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 42px;
+  font-size: 20px;
+  border: none;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  background-color: #fefaf6;
+  color: #102c57;
+  width: 128px;
+  height: 45px;
+  justify-content: center;
+  align-items: center;
+}
+
+#login {
+  background-color: #fefaf6;
+  border-radius: 20px;
+  flex: 1 1 200px;
+  max-width: 100%;
+  text-align: left;
+}
+
+#loginname {
+  font-size: 26px;
+  font-weight: 600;
+  color: #102c57;
+  margin: 0;
+}
+
+.login {
+  font-size: 16px;
+  margin: 0;
+  color: #102c57;
+  font-weight: 500;
+}
+
+#logref {
+  color: #dac0a3;
+  text-decoration: none;
+}
+
+#listcontainer {
+  background-color: #102c57;
+  border-radius: 20px;
+  flex: 1 1 400px;
+  max-width: 100%;
+  height: 386px;
+  margin-top: 22px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#todaylist {
+  font-size: 35px;
+  font-weight: 600;
+  color: #fefaf6;
+  text-align: center;
+  margin: 0;
+}
+
+.listline {
+  border: none;
+  border-top: 5px solid #eadbc8;
+  margin: 3px 0 0;
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  font-size: 20px;
+  color: #fefaf6;
+  font-weight: 500;
+}
+
+.taskclass {
+  padding: 5px;
+  border-radius: 5px;
+}
+
+#noTaskMessage {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 400;
+  color: #fefaf6;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#calendar {
+  background-color: #102c57;
+  box-shadow: inset 0 0 0 5px #eadbc8, 5px 5px 10px rgba(0, 0, 0, 0.25);
+  border: none;
+  max-width: 100%;
+  flex: 1 1 300px;
+  height: 384px;
+  padding: 5px;
+  border-radius: 20px;
+  margin-top: 22px;
+}
+
+#monthandyear {
+  color: #fefaf6;
+  font-weight: 600;
+  text-align: center;
+  margin: 0;
+}
+
+.header-calendar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 5px;
+}
+
+.header-calendar button {
+  cursor: pointer;
+  color: #fefaf6;
+  background: none;
+  border: none;
+  font-size: 30px;
+}
+
+#previous {
+  justify-content: flex-start;
+}
+
+#next {
+  justify-content: flex-end;
+}
+
+th {
+  font-weight: 400;
+  color: #eadbc8;
+}
+
+.table-calendar {
+  border-collapse: collapse;
+  width: 100%;
+  height: 70%;
+}
+
+.task-tooltip {
+  font-size: 16px;
+  position: absolute;
+  background-color: rgba(254, 250, 246, 0.7);
+  color: #102c57;
+  padding: 10px;
+  border-radius: 4px;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: none;
+  transition: all 0.3s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.task-marker:hover .task-tooltip {
+  display: block;
+}
+
+.task-marker::after {
+  content: "\25CF";
+  color: #fefaf6;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  font-size: 12px;
+}
+
+.date-picker {
+  position: relative;
+  font-weight: 400;
+  color: #eadbc8;
+  text-align: center;
+}
+
+.date-picker.selected {
+  font-weight: bold;
+}
+
+.date-picker.selected span {
+  border: 2px solid currentColor;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 15px;
+}
+
+.date-picker:nth-child(1) {
+  color: red;
+}
+
+.date-picker:nth-child(6) {
+  color: green;
+}
+
+.date-picker:hover {
+  background-color: #eadbc8;
+  color: #102c57;
+  cursor: pointer;
+  transition: 0.25s all ease;
+}
+
+.calendarline {
+  border: none;
+  border-top: 5px solid #eadbc8;
+  margin: 0 0;
+  width: 100%;
+}
+
+.footer-calendar {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.selectmonth,
+.selectyear {
+  display: flex;
+  gap: 5px;
+}
+
+.selectmonth label,
+.selectyear label {
+  font-weight: 600;
+  color: #fefaf6;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+}
+.month,
+.year {
+  position: relative;
+  display: flex;
+  width: 115px;
+  height: 45px;
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.month select,
+.year select {
+  font-weight: 600;
+  font-family: "Mali", cursive;
+  font-size: 15px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  color: #102c57;
+  border: none;
+  background-color: #fefaf6;
+  border-radius: 3px;
+  padding: 5px 1em;
+  flex: 1;
+}
+
+.year select {
+  padding-left: 10px;
+}
+
+.month::after,
+.year::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1em;
+  background-color: #eadbc8;
+  transition: 0.25s all ease;
+  pointer-events: none;
+}
+
+.month:hover::after,
+.year:hover::after {
+  color: #fefaf6;
 }
