--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+
 * {
   box-sizing: border-box;
 }
+
 body {
   font-family: "Mali", cursive;
   background-color: #fefaf6;
@@ -26,7 +29,7 @@ h1 {
   justify-content: space-between;
 }
 
-#taskinputcontainer {
+.inputcontainer {
   background-color: #102c57;
   border-radius: 30px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
@@ -78,8 +81,6 @@ h1 {
   color: #102c57;
   width: 128px;
   height: 45px;
-  justify-content: center;
-  align-items: center;
 }
 
 #login {
@@ -97,7 +98,7 @@ h1 {
   margin: 0;
 }
 
-.login {
+p {
   font-size: 16px;
   margin: 0;
   color: #102c57;
@@ -145,9 +146,30 @@ ul {
 }
 
 li {
+  display: flex;
+  gap: 25px;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+li span {
   font-size: 20px;
   color: #fefaf6;
   font-weight: 500;
+
+
+}
+
+li button {
+  font-family: "Mali", cursive;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 42px;
+  font-size: 19px;
+  border: none;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  background-color: #fefaf6;
+  color: #102c57;
 }
 
 .taskclass {
@@ -220,7 +242,7 @@ th {
   height: 70%;
 }
 
-.task-tooltip {
+.tooltip-container {
   font-size: 16px;
   position: absolute;
   background-color: rgba(254, 250, 246, 0.7);
@@ -236,12 +258,24 @@ th {
   z-index: 1;
 }
 
-.task-marker:hover .task-tooltip {
+.tooltip-scrollable {
+  max-height: 70px;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.task-tooltip{
+  font-size: 16px;
+  margin-bottom: 8px;
+
+}
+
+.task-marker:hover .tooltip-container {
   display: block;
 }
 
 .task-marker::after {
-  content: "\25CF";
+  content: "\2713";
   color: #fefaf6;
   position: absolute;
   bottom: 5px;
@@ -254,10 +288,6 @@ th {
   font-weight: 400;
   color: #eadbc8;
   text-align: center;
-}
-
-.date-picker.selected {
-  font-weight: bold;
 }
 
 .date-picker.selected span {
@@ -356,4 +386,8 @@ th {
 .month:hover::after,
 .year:hover::after {
   color: #fefaf6;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
